<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasesdeDatos</string>
    <string name="sapudo_principal">PRUEBA DE BASE DE DATOS</string>
    <string name="action_settings">Settings</string>
    <string name="tv_nombre">Nombre:</string>
    <string name="tv_apellido">Apellido:</string>
    <string name="tv_edad">Edad:</string>
    <string name="bt_guardar">Guardar</string>
    <string name="title_activity_segunda">Segunda</string>
    <string name="hello_world">Hello world!</string>
    <string name="listar">listar</string>

</resources>
