<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ff565cff"
    android:weightSum="1">

    <TextView android:text="@string/sapudo_principal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="325dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_nombre"
            android:id="@+id/tvnombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="42dp"
            android:textColor="#fffffffb"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ET_Nombre"
            android:background="#ffc1d9ca"
            android:textColor="#ff000000"
            android:layout_below="@+id/tvnombre"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_apellido"
            android:id="@+id/tvapellido"
            android:textColor="#fffffffb"

            android:layout_below="@+id/ET_Nombre"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ET_Apellido"
            android:background="#ffc1d9ca"
            android:textColor="#ff000000"
            android:layout_below="@+id/tvapellido"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_edad"
            android:id="@+id/textView3"
            android:textColor="#fffffffb"

            android:layout_below="@+id/ET_Apellido"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_guardar"
            android:id="@+id/button"
            android:layout_marginTop="34dp"
            android:onClick="GuardarDatos"
            android:layout_alignParentStart="true"
            android:shadowColor="#ff254b6e"
            android:layout_below="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ET_Edad"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:background="#ffc1d9ca" />

    </RelativeLayout>

    <ImageView
        android:layout_width="157dp"
        android:layout_height="156dp"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
